--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App for creating public and private stories",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "dev": "cross-env NODE_ENV=development nodemon app",
     "postinstall": "node ./scripts/post-install.js"
   },
