--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "storybooks",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.11.1"
+  },
   "description": "App for creating public and private stories",
   "main": "app.js",
   "scripts": {
