--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "storybooks",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.11.1"
+  },
   "description": "App for creating public and private stories",
   "main": "app.js",
   "scripts": {
@@ -11,12 +14,15 @@
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-flash": "^0.0.2",
     "express-handlebars": "^4.0.4",
-    "express-session": "^1.17.1",
+    "express-session": "^1.17.2",
     "fs-extra": "^9.0.1",
     "method-override": "^3.0.0",
     "moment": "^2.27.0",
@@ -24,6 +30,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "randomatic": "^3.1.1"
   },
   "devDependencies": {
